--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,8 +1,8 @@
 .container {
     display: flex;
     max-width: 700px;
-  padding: 0 1rem;
-  margin: 3rem auto 6rem;
+  padding: 0rem;
+  margin: auto;
 }
 
 .navbar {
