--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -1,82 +1,49 @@
-.container {
-  display: flex;
-  max-width: 700px;
-  padding: 0rem;
-  margin: auto;
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Montserrat:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+
+.home {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
 }
 
-.list {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  right: 60px;
+.navItem .navLink {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: #626464;
+    text-decoration: none;
+    padding: 15px;
 }
 
-.navbar {
-  transition: all 0.4s;
+.logo {
+    cursor: pointer;
+    font-family: "DM Serif Display", serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 56px;
+    text-align: center;
+    color: #28514f;
 }
 
-.navItem {
-  display: inline;
-  color: rgb(54, 51, 51);
-  text-align: center;
-  text-decoration: none;
+.navLinks {
+    list-style: none;
 }
 
-.navbar .navLink {
-  color: rgb(54, 51, 51);
-  float: left;
-  text-align: center;
-  padding: 15px 35px;
-  text-decoration: none;
-  font-size: 17px;
+.navLinks .navItem {
+    display: inline-block;
+    padding: 0 20px;
 }
 
-.navbar .navLink:hover,
-.navbar .navLink:focus {
-  background-color: rgba(228, 225, 225, 0.9);
-  color: rgb(33, 75, 42);
-  text-decoration: none;
-  border-radius: 30px;
+.navLinks .navLink {
+    transition: all 0.3 ease;
 }
 
-.navbar .navbar-brand {
-  color: rgb(54, 51, 51);
-}
-
-
-.navbar.active .navLink {
-  color: #555;
-}
-
-.navbar.active .navLink:hover,
-.navbar.active .navLink:focus {
-  color: #555;
-  text-decoration: none;
-}
-
-.navbar.active .navbar-brand {
-  color: #555;
-}
-
-.borderCircle {
-  border-radius: 999px;
-}
-
-.title {
-  display: flex;
-  color: rgb(33, 75, 42);
-  font-family: "Comic Sans MS", "Comic Sans", "cursive"	;
-  position: absolute;
-  left: 50px;
-  font-size: 40px;
-  font-weight: 900;
-  margin:0;
-}
-.list {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+.navLinks .navLink:hover {
+    background-color: rgba(101, 114, 123, 0.2);
+    color: #28514f;
+    text-decoration: none;
+    border-radius: 40px;
 }
