--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -1,11 +1,49 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Montserrat:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 
-.home {
+.headerBurger {
+    display: none;
+}
+
+@media (max-width: 767px) {
+    
+}
+
+.header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 60;
+    height: fit-content;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.header:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #e5e5e5;
+    z-index: 2;
+}
+
+.headerBody {
+    position: relative;
     display: flex;
     justify-content: space-between;
+    height: 80px;
     align-items: center;
-    padding: 30px 10%;
+}
+
+.container {
+    max-width: 1180px;
+    margin: 0px auto;
+    padding: 0px 10px;
 }
 
 .navItem .navLink {
@@ -18,32 +56,99 @@
 }
 
 .logo {
+    position: relative;
+    z-index: 3;
+    flex: 0 0 60px;
     cursor: pointer;
+    max-width: 100%;
     font-family: "DM Serif Display", serif;
     font-style: normal;
     font-weight: 400;
     font-size: 48px;
-    line-height: 56px;
     text-align: center;
     color: #28514f;
 }
 
-.navLinks {
+.headerList {
     list-style: none;
+    position: relative;
+    display: flex;
+    z-index: 5;
 }
 
-.navLinks .navItem {
-    display: inline-block;
+.headerList .navItem {
     padding: 0 20px;
 }
 
-.navLinks .navLink {
-    transition: all 0.3 ease;
+.navItem {
+    position: relative;
+    display: flex;
 }
 
-.navLinks .navLink:hover {
+.headerList .navLink:hover {
     background-color: rgba(101, 114, 123, 0.2);
     color: #28514f;
     text-decoration: none;
     border-radius: 40px;
 }
+
+/* .headerList .navLink:visited {
+    background-color: rgba(101, 114, 123, 0.2);
+    color: #28514f;
+    text-decoration: none;
+    border-radius: 40px;
+} */
+
+
+
+/* .headerBody {
+    height: 50px;
+}
+.headerBurger {
+    display: block;
+    width: 30px;
+    height: 20px;
+    position: relative;
+    z-index: 5;
+}
+
+.spanBurger {
+    position: absolute;
+    background-color: #28514f;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    top: 9px;
+}
+
+.headerBurger:before {
+    content: "";
+    background-color: #28514f;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    top: -8px;
+}
+.headerBurger:after {
+    content: "";
+    background-color: #28514f;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    top: 8px;
+}
+
+.headerMenu {
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #e5e5e5;
+    padding:70px 0 0 0;
+}
+
+.headerList {
+    display: block;
+} */
