--- a/components/contactsPage.module.css
+++ b/components/contactsPage.module.css
@@ -1,6 +1,16 @@
 .container {
-    display: grid;
+    width: 100%;
+    top: 0;
+    left: 0;
     height: fit-content;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.boxWrapper {
+    display: grid;
+    height: 700px;
     justify-content: center;
     flex-direction: column;
     align-items: center;
@@ -8,12 +18,13 @@
     padding: 15rem;
     margin-top: 10rem;
 }
+
 .headQuote {
     position: relative;
     width: 583px;
     height: 112px;
     left: calc(50% - 641px / 2 + 0.5px);
-    /* top: 27rem; */
+    bottom: 6rem;
     font-family: "DM Serif Display", serif;
     font-style: normal;
     font-weight: 400;
@@ -28,7 +39,7 @@
     width: 610px;
     height: 64px;
     left: calc(50% - 610px / 2);
-    /* top: 28rem; */
+    bottom: 4rem;
     font-family: "Montserrat", sans-serif;
     font-style: normal;
     font-weight: 450;
@@ -39,11 +50,11 @@
 }
 
 .infoButton {
-    color: #28514F;
-    background-color: #FFFFFF;
+    color: #28514f;
+    background-color: #ffffff;
     border-radius: 50px;
     margin: 60px;
-    margin-left: 41%;
+    margin-left: 32%;
     width: 204px;
     height: 55px;
     font-family: "Montserrat", sans-serif;
@@ -52,5 +63,66 @@
 }
 
 .aboutImg {
-    width:100%;
+    width: 100%;
+}
+
+.banner {
+    position: relative;
+    width: 940px;
+    height: 348px;
+    left: 0%;
+    right: 0%;
+    top: 0px;
+    background: #f8e6be;
+    margin: 5rem 28rem;
+}
+
+.text {
+    position: relative;
+    width: 583px;
+    height: 95px;
+    left: 20.83%;
+    right: 6.25%;
+    top: 90.67px;
+    font-family: "DM Serif Display", serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 47px;
+    text-align: center;
+    color: #333333;
+}
+
+.appStore {
+    color: white;
+    background-color: #28514f;
+    border-radius: 30px;
+    margin: 30px;
+    margin-left: 10%;
+    width: 25%;
+    height: 56px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    border: none;
+}
+
+.appStore:hover {
+    background-color: #1e4442;
+}
+
+.playMarket {
+    color: white;
+    background-color: #aeb4b6;
+    border-radius: 30px;
+    margin: 30px;
+    margin-left: 20%;
+    width: 25%;
+    height: 56px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    border: none;
+}
+
+.playMarket:hover {
+    background-color: #a9abac;
 }
