added banner below

--- a/components/contactsPage.module.css
+++ b/components/contactsPage.module.css
@@ -79,9 +79,9 @@
 
 .text {
     position: relative;
-    width: 583px;
+    width: 350px;
     height: 95px;
-    left: 20.83%;
+    left: 5%;
     right: 6.25%;
     top: 90.67px;
     font-family: "DM Serif Display", serif;
@@ -97,9 +97,9 @@
     color: white;
     background-color: #28514f;
     border-radius: 30px;
-    margin: 30px;
-    margin-left: 10%;
-    width: 25%;
+    margin-top: 10%;
+    margin-left: 5%;
+    width: 18%;
     height: 56px;
     font-family: "Montserrat", sans-serif;
     font-size: 16px;
@@ -114,9 +114,8 @@
     color: white;
     background-color: #aeb4b6;
     border-radius: 30px;
-    margin: 30px;
-    margin-left: 20%;
-    width: 25%;
+    margin-left: 5%;
+    width: 18%;
     height: 56px;
     font-family: "Montserrat", sans-serif;
     font-size: 16px;
@@ -125,4 +124,13 @@
 
 .playMarket:hover {
     background-color: #a9abac;
+}
+
+.profile {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 51.04%;
+    right: 5.31%;
+    top: calc(40% - 348px / 2 - 0.33px);
 }
