--- a/components/aboutPage.module.css
+++ b/components/aboutPage.module.css
@@ -70,13 +70,13 @@
 }
 
 .profile {
-    position: absolute;
+    position: relative;
     justify-content: space-around;
     align-items: center;
     left: -0.19px;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    margin-top: 20%;
 }
 .container {
     margin-top: 20%;
