--- a/components/aboutPage.module.css
+++ b/components/aboutPage.module.css
@@ -15,8 +15,7 @@
 .headQuote {
     width: 641px;
     height: 112px;
-    left: calc(50% - 641px / 2 + 0.5px);
-    top: -5.89px;
+    margin-left: 10rem;
     font-family: "DM Serif Display", serif;
     font-style: normal;
     font-weight: 400;
@@ -38,8 +37,7 @@
     color: white;
     background-color: #28514f;
     border-radius: 30px;
-    margin: 30px;
-    margin-left: 10%;
+    margin: 2rem 8rem;
     width: 25%;
     height: 56px;
     font-family: "Montserrat", sans-serif;
@@ -56,8 +54,8 @@
     color: white;
     background-color: #aeb4b6;
     border-radius: 30px;
-    margin: 30px;
-    margin-left: 20%;
+    justify-content: center;
+    margin: 2rem 3rem;
     width: 25%;
     height: 56px;
     font-family: "Montserrat", sans-serif;
@@ -78,10 +76,6 @@
     height: 100%;
     margin-top: 20%;
 }
-.container {
-    margin-top: 20%;
-}
-
 .line {
     width: 157px;
     height: 3px;
@@ -188,9 +182,12 @@
     grid-row-end: 3;
 }
 
-@media (max-width: 900px) {
+@media screen and (max-width: 900px) {
     .boxes {
         display: grid;
+        width: 100%;
+       height: 100%;
+       margin: 0;
     }
 }
 
