--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -5,8 +5,10 @@
     display: none;
 }
 
-@media (max-width: 767px) {
-    
+@media (max-width: 780px) {
+    .header  {
+        width: 100%;
+    }
 }
 
 .header {
@@ -19,11 +21,11 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    background-color: #e5e5e5;
 }
 
 .header:before {
     content: "";
-    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -33,7 +35,7 @@
 }
 
 .headerBody {
-    position: relative;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     height: 80px;
@@ -56,7 +58,6 @@
 }
 
 .logo {
-    position: relative;
     z-index: 3;
     flex: 0 0 60px;
     cursor: pointer;
@@ -71,7 +72,6 @@
 
 .headerList {
     list-style: none;
-    position: relative;
     display: flex;
     z-index: 5;
 }
@@ -81,7 +81,6 @@
 }
 
 .navItem {
-    position: relative;
     display: flex;
 }
 
@@ -92,63 +91,3 @@
     border-radius: 40px;
 }
 
-/* .headerList .navLink:visited {
-    background-color: rgba(101, 114, 123, 0.2);
-    color: #28514f;
-    text-decoration: none;
-    border-radius: 40px;
-} */
-
-
-
-/* .headerBody {
-    height: 50px;
-}
-.headerBurger {
-    display: block;
-    width: 30px;
-    height: 20px;
-    position: relative;
-    z-index: 5;
-}
-
-.spanBurger {
-    position: absolute;
-    background-color: #28514f;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    top: 9px;
-}
-
-.headerBurger:before {
-    content: "";
-    background-color: #28514f;
-    width: 100%;
-    height: 2px;
-    left: 0;
-    top: -8px;
-}
-.headerBurger:after {
-    content: "";
-    background-color: #28514f;
-    width: 100%;
-    height: 2px;
-    left: 0;
-    top: 8px;
-}
-
-.headerMenu {
-    position: fixed;
-    display: block;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #e5e5e5;
-    padding:70px 0 0 0;
-}
-
-.headerList {
-    display: block;
-} */
