--- a/styles/global.css
+++ b/styles/global.css
@@ -1,25 +1,35 @@
 html,
 body {
     background-color: #e5e5e5;
-display: grid;
-justify-items: center;
-justify-content: center;
-width: 100%;
+    display: grid;
+    justify-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     line-height: 1.6;
     font-size: 18px;
     margin: 0;
     padding: 5rem 0 0 0;
-    box-sizing: border-box
+    box-sizing: border-box;
+    
+}
+
+@media screen and (max-width: 900px) {
+    html,
+    body {
+        max-width: 100%;
+  overflow-x: hidden;
+    }
 }
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
 }
-
 
 a {
     color: #0070f3;
