--- a/components/aboutPage.module.css
+++ b/components/aboutPage.module.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Montserrat:wght@500&display=swap");
-
+ 
 .wrapper {
     display: grid;
     height: fit-content;
@@ -8,16 +8,13 @@
     flex-direction: column;
     align-items: center;
     grid-gap: 0px 0px;
-    /* grid-template-rows: 2fr 2fr; */
-    /* grid-template-columns: 1fr 1fr; */
 }
 
 .headQuote {
     width: 641px;
     height: 112px;
-    margin-left: 10rem;
+    margin-left: 9rem;
     font-family: "DM Serif Display", serif;
-    font-style: normal;
     font-weight: 400;
     font-size: 48px;
     line-height: 56px;
@@ -71,12 +68,13 @@
 .profile {
     justify-content: space-around;
     align-items: center;
-    left: -0.19px;
-    width: 100%;
+    margin: 5rem;
+    max-width: 100%;
     height: 100%;
     margin-top: 20%;
 }
 .line {
+    width: 100%;
     width: 157px;
     height: 3px;
     left: 4%;
@@ -84,14 +82,6 @@
     background: rgba(27, 31, 43, 0.12);
     border-radius: 40px;
 }
-
-.boxes {
-    display: grid;
-    padding: 3rem 0;
-    grid-template-rows: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-}
-
 
 
 .img {
@@ -101,157 +91,72 @@
     top: calc(50% - 321px / 2 - 163.5px);
 }
 
-.textBox {
-    height: 95px;
-    left: 10%;
-    right: 0.83%;
-    top: 60%;
-    color: #1b1f2b;
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: bold;
-    font-size: 40px;
-    line-height: 47px;
-    margin-left: 1.4rem;
-    margin-bottom: 1rem;
-}
 
-.boxQuote {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: #1b1f2b;
-    text-align: start;
-    top: 90%;
-    padding: 1.5rem 1.5rem 0;
-    margin-bottom: 2rem;
-}
 
-.boxOne {
-    padding: 2rem;
-    margin: 2rem;
-    width: 460px;
-    height: 768px;
-    top: 6rem;
-    background: #dae1f4;
-    border-radius: 20px;
-    grid-column-start: 1;
-    grid-row-start: 1;
-    grid-row-end: 4;
-}
 
-.boxTwo {
-    padding: 1rem 2rem 1rem;
-    margin-bottom: 2rem;
-    width: 460px;
-    height: 800px;
-    left: 55%;
-    bottom: 41rem;
-    background: #d0e6f3;
-    border-radius: 20px;
-    grid-column-start: 3;
-    grid-row-start: 1;
-    grid-row-end: 3;
-}
 
-.boxThree {
-    padding: 3rem;
-    margin: 0;
-    width: 460px;
-    height: 832px;
-    margin-left: 2rem;
-    right: 25%;
-    background: #e0f0e6;
-    border-radius: 20px;
-    grid-column-start: 1;
-    grid-row-start: 3;
-    grid-row-end: 4;
-}
 
-.boxFour {
-    padding: 4rem 2rem;
-    width: 460px;
-    height: 771px;
-    left: 55%;
-    right: 15%;
-    bottom: 81rem;
-    background: #f4f0e9;
-    border-radius: 20px;
-    grid-column-start: 3;
-    grid-row-start: 3;
-    grid-row-end: 3;
-}
 
-@media screen and (max-width: 900px) {
+
+/* 
+@media only screen and (max-width: 380px) {
+    
     .boxes {
         display: grid;
         width: 100%;
-       height: 100%;
-       margin: 0;
+        height: 100%;
+        margin: 0;
     }
+    .headQuote {
+        width: 330px;
+    }
+    } */
+
+@media screen and (max-width: 900px) {
+    .wrapper {
+        max-width: 100%;
+    }
+    .boxes {
+        display: grid;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+    }
+    .button {
+        margin: 1rem 6rem;
+    }
+    .appStore {
+        width: 8rem;
+        height: 3rem;
+    }
+    .playMarket {
+        width: 8rem;
+        height: 3rem;
+    }
+    .headQuote {
+        max-width: 100%;
+    }
+    .quote {
+        max-width: 100%;
+    }
+    .boxes {
+        display: block;
+        width: 50%;
+        margin: 0 10rem;
+    }
+    .boxTwo {
+        margin-left: 2rem;
+    }
+    .boxFour {
+        margin: 2rem;
+    }
+
 }
 
-.blueImg {
-    left: 10.87%;
-    right: 10.87%;
-    top: calc(50% - 391px / 2 + 187.5px);
-}
 
-.blueText {
-    height: 95px;
-    left: 10%;
-    right: 0.83%;
-    color: #1b1f2b;
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: bold;
-    font-size: 40px;
-    line-height: 47px;
-    margin-left: 1.4rem;
-    margin-bottom: 2rem;
-    
-}
 
-.blueQuote {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: #1b1f2b;
-    text-align: start;
-    padding: 1.5rem 1.5rem 0;
-    margin-bottom: 2rem;
-    margin-top: 1.5rem;
-}
 
-.reviewBox {
-    padding: 1rem;
-    width: 294px;
-    height: 230px;
-    left: 0%;
-    right: 0%;
-    top: 0px;
-    background: #ffffff;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    box-sizing: border-box;
-    border-radius: 20px;
-}
 
-.textReview {
-    height: 60px;
-    left: 5%;
-    top: 28px;
-    font-family: "Merriweather" sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
-    color: #1b1f2b;
-    text-align: start;
-}
 
-.starsImg {
-    height: 23px;
-    left: 10.54%;
-    right: 44.9%;
-    top: 10rem;
-}
+
+
