--- a/components/contactsPage.module.css
+++ b/components/contactsPage.module.css
@@ -1,5 +1,5 @@
 .container {
-    display: block;
+    display: grid;
     width: 100%;
     top: 0;
     left: 0;
@@ -10,24 +10,20 @@
 }
 
 .boxWrapper {
-    display: grid;
     height: 700px;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     background-color: #28514f;
-    padding: 15rem;
+    padding: 15rem 37rem;
     margin-top: 10rem;
 }
 
 .headQuote {
-    position: relative;
     width: 583px;
     height: 112px;
-    left: calc(50% - 641px / 2 + 0.5px);
     bottom: 6rem;
     font-family: "DM Serif Display", serif;
-    font-style: normal;
     font-weight: 400;
     font-size: 48px;
     line-height: 56px;
@@ -36,12 +32,10 @@
 }
 
 .quote {
-    position: relative;
     width: 610px;
     height: 64px;
-    left: calc(50% - 610px / 2);
-    bottom: 4rem;
     font-family: "Montserrat", sans-serif;
+    margin: 1rem;
     font-style: normal;
     font-weight: 450;
     font-size: 19px;
@@ -68,7 +62,6 @@
 }
 
 .banner {
-    position: relative;
     width: 940px;
     height: 348px;
     left: 0%;
@@ -79,7 +72,6 @@
 }
 
 .text {
-    position: relative;
     width: 350px;
     height: 95px;
     left: 5%;
@@ -130,7 +122,6 @@
 }
 
 .profile {
-    position: absolute;
     width: 100%;
     height: 100%;
     left: 51.04%;
@@ -139,7 +130,6 @@
 }
 
 .headText {
-    position: relative;
     width: 641px;
     height: 112px;
     left: calc(50% - 641px / 2 + 0.5px);
@@ -153,7 +143,6 @@
 }
 
 .textQuote {
-    position: relative;
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     margin-top: 3rem;
@@ -163,7 +152,6 @@
 }
 
 .inputForm {
-    position: relative;
     width: 276px;
     height: 60px;
     left: calc(50% - 276px / 2 - 0.33px);
@@ -186,7 +174,6 @@
 }
 
 .confirmButton {
-    position: relative;
     width: 6rem;
     height: 60px;
     left: 42%;
@@ -206,7 +193,6 @@
 }
 
 .logo {
-    position: relative;
     flex: 0 0 60px;
     cursor: pointer;
     margin-right: 56rem;
