--- a/components/aboutPage.module.css
+++ b/components/aboutPage.module.css
@@ -13,7 +13,7 @@
 .headQuote {
     width: 641px;
     height: 112px;
-    margin-left: 9rem;
+    margin-left: 2rem;
     font-family: "DM Serif Display", serif;
     font-weight: 400;
     font-size: 48px;
@@ -25,17 +25,23 @@
 .quote {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
+    /* margin: 2rem 1rem 0; */
     font-size: 16px;
     color: #626464;
     text-align: center;
 }
 
+.button {
+    display: inline;
+    margin: 2rem 
+}
+
 .appStore {
     color: white;
     background-color: #28514f;
+    margin-left: 6rem;
     border-radius: 30px;
-    margin: 2rem 8rem;
-    width: 25%;
+    width: 20%;
     height: 56px;
     font-family: "Montserrat", sans-serif;
     font-size: 16px;
@@ -50,10 +56,10 @@
 .playMarket {
     color: white;
     background-color: #aeb4b6;
+    margin-left: 10rem;
     border-radius: 30px;
     justify-content: center;
-    margin: 2rem 3rem;
-    width: 25%;
+    width: 20%;
     height: 56px;
     font-family: "Montserrat", sans-serif;
     font-size: 16px;
@@ -67,22 +73,10 @@
 
 .profile {
     justify-content: space-around;
-    align-items: center;
-    margin: 5rem;
     max-width: 100%;
     height: 100%;
-    margin-top: 20%;
+    margin-top: 15%;
 }
-.line {
-    width: 100%;
-    width: 157px;
-    height: 3px;
-    left: 4%;
-    align-items: center;
-    background: rgba(27, 31, 43, 0.12);
-    border-radius: 40px;
-}
-
 
 .img {
     position: absolute;
@@ -98,57 +92,34 @@
 
 
 
-/* 
+
 @media only screen and (max-width: 380px) {
     
-    .boxes {
-        display: grid;
-        width: 100%;
-        height: 100%;
-        margin: 0;
-    }
     .headQuote {
-        width: 330px;
+        font-size: 1.5rem;
+        text-align: center;
     }
-    } */
+    }
 
 @media screen and (max-width: 900px) {
     .wrapper {
-        max-width: 100%;
-    }
-    .boxes {
         display: grid;
-        width: 100%;
-        height: 100%;
-        margin: 0;
-    }
-    .button {
-        margin: 1rem 6rem;
+        justify-items: center;
+        max-width: 100%;
     }
     .appStore {
         width: 8rem;
         height: 3rem;
+        margin-right: 3rem;
     }
     .playMarket {
         width: 8rem;
         height: 3rem;
-    }
-    .headQuote {
-        max-width: 100%;
+        margin-left: 0;
+        margin-right: 5rem;
     }
     .quote {
-        max-width: 100%;
-    }
-    .boxes {
-        display: block;
-        width: 50%;
-        margin: 0 10rem;
-    }
-    .boxTwo {
-        margin-left: 2rem;
-    }
-    .boxFour {
-        margin: 2rem;
+       margin-left: 2rem;
     }
 
 }
