--- a/components/boxesPage.module.css
+++ b/components/boxesPage.module.css
@@ -1,4 +1,4 @@
-.container {
+.main {
     display: grid;
     height: fit-content;
     justify-content: center;
@@ -119,12 +119,10 @@
 
 
 .reviewBox {
-    padding: 1rem;
+    padding: 1.5rem;
+    margin: 0 20rem;
     width: 294px;
     height: 230px;
-    left: 0%;
-    right: 0%;
-    top: 0px;
     background: #ffffff;
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
@@ -145,7 +143,6 @@
     font-family: "DM Serif Display", serif;
     font-weight: 400;
     font-size: 48px;
-    line-height: 56px;
     text-align: center;
     color: #28514f;
 }
@@ -195,32 +192,9 @@
         max-width: 100%;
     }
     .boxes {
-        display: grid;
-        width: 100%;
-        height: 100%;
-        margin: 0;
-    }
-    .button {
-        margin: 1rem 6rem;
-    }
-    .appStore {
-        width: 8rem;
-        height: 3rem;
-    }
-    .playMarket {
-        width: 8rem;
-        height: 3rem;
-    }
-    .headQuote {
-        max-width: 100%;
-    }
-    .quote {
-        max-width: 100%;
-    }
-    .boxes {
         display: block;
         width: 50%;
-        margin: 0 10rem;
+        margin: 0 13rem;
     }
     .boxTwo {
         margin-left: 2rem;
@@ -228,6 +202,9 @@
     .boxFour {
         margin: 2rem;
     }
-
+    .boxQuote {
+        margin-top: 2rem;
+    }
+   
 }
 
