--- a/components/contactsPage.module.css
+++ b/components/contactsPage.module.css
@@ -57,28 +57,16 @@
     border: none;
 }
 
-.aboutImg {
-    width: 100%;
-}
 
-.banner {
-    width: 940px;
-    height: 348px;
-    left: 0%;
-    right: 0%;
-    top: 0px;
-    background: #f8e6be;
-    margin: 5rem 28rem;
+.block {
+    display: inline;
 }
 
 .text {
     width: 350px;
     height: 95px;
-    left: 5%;
-    right: 6.25%;
-    top: 90.67px;
+    margin-left: 2.5rem;
     font-family: "DM Serif Display", serif;
-    font-style: normal;
     font-weight: normal;
     font-size: 40px;
     line-height: 47px;
@@ -121,21 +109,31 @@
     background-color: #a9abac;
 }
 
+.banner {
+    width: 55rem;
+    height: 20rem;
+    padding: 2rem 1rem;
+    background: #f8e6be;
+    margin: 5rem 28rem;
+}
+.button {
+    display: inline;
+    /* width:auto */
+}
+
 .profile {
     width: 100%;
-    height: 100%;
-    left: 51.04%;
-    right: 5.31%;
-    top: calc(40% - 348px / 2 - 0.33px);
+    height: 348px;
+    margin: 0 0 30rem 29rem;
+    margin-bottom: 3rem;
+    float: left;
 }
 
 .headText {
     width: 641px;
     height: 112px;
-    left: calc(50% - 641px / 2 + 0.5px);
-    top: 35%;
     font-family: "DM Serif Display", serif;
-    font-style: normal;
+    margin-left: 36rem;
     font-weight: 400;
     font-size: 48px;
     text-align: center;
@@ -145,21 +143,24 @@
 .textQuote {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
-    margin-top: 3rem;
+    /* margin-top: 1rem; */
     font-size: 16px;
     color: #65727b;
     text-align: center;
 }
 
+.email {
+    display: flex;
+    justify-content: center;
+    margin-top: 7rem;
+}
+
 .inputForm {
+    display: inline-block;
     width: 276px;
     height: 60px;
-    left: calc(50% - 276px / 2 - 0.33px);
-    top: -0.47px;
     border: none;
     font-family: "Roboto";
-    font-style: normal;
-    font-weight: normal;
     font-size: 20px;
     line-height: 20px;
     text-align: center;
@@ -192,6 +193,10 @@
     border-radius: 0px 40px 40px 0px;
 }
 
+.confirmButton:hover {
+    background: #21413f;
+}
+
 .logo {
     flex: 0 0 60px;
     cursor: pointer;
@@ -208,13 +213,11 @@
 .list {
     position: relative;
     padding: 0 5rem;
-    
 }
 
 .navItem {
     display: inline-block;
     left: 20rem;
-    
 }
 
 .navLink {
@@ -226,7 +229,6 @@
     color: #626464;
     text-decoration: none;
     left: 20rem;
-
 }
 
 .navLink:hover {
