--- a/components/aboutPage.module.css
+++ b/components/aboutPage.module.css
@@ -16,7 +16,7 @@
     margin-left: 2rem;
     font-family: "DM Serif Display", serif;
     font-weight: 400;
-    font-size: 48px;
+    font-size: 49px;
     line-height: 56px;
     text-align: center;
     color: #28514f;
@@ -25,8 +25,8 @@
 .quote {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
-    /* margin: 2rem 1rem 0; */
-    font-size: 16px;
+    margin: 2rem 0 0 0;
+    font-size: calc(16px + 0.01vh);
     color: #626464;
     text-align: center;
 }
@@ -39,7 +39,7 @@
 .appStore {
     color: white;
     background-color: #28514f;
-    margin-left: 6rem;
+    margin-left: 5rem;
     border-radius: 30px;
     width: 20%;
     height: 56px;
@@ -72,57 +72,74 @@
 }
 
 .profile {
-    justify-content: space-around;
-    max-width: 100%;
+    width: 100%;
     height: 100%;
     margin-top: 15%;
 }
 
-.img {
-    position: absolute;
-    left: 10.87%;
-    right: 10.87%;
-    top: calc(50% - 321px / 2 - 163.5px);
-}
 
-
-
-
-
-
-
-
-
-@media only screen and (max-width: 380px) {
-    
-    .headQuote {
-        font-size: 1.5rem;
-        text-align: center;
-    }
-    }
 
 @media screen and (max-width: 900px) {
     .wrapper {
         display: grid;
         justify-items: center;
-        max-width: 100%;
+        
     }
     .appStore {
-        width: 8rem;
-        height: 3rem;
+        width: 6rem;
+        height: 2.5rem;
         margin-right: 3rem;
+        font-size: 13.5px;
     }
     .playMarket {
-        width: 8rem;
-        height: 3rem;
+        width: 6rem;
+        height: 2.5rem;
         margin-left: 0;
         margin-right: 5rem;
+        font-size: 13.5px;
     }
     .quote {
-       margin-left: 2rem;
+       font-size: 2.1vw;
     }
-
+    .profile {
+        width: 45%;
+        margin: 2rem 2.5rem 0 0;
+    }
+    .headQuote {
+        max-width: 100%;
+        padding: 0;
+        font-size: 3.9vw;
+        text-align: center;
+        line-height: 2.2rem;
+        height: 3rem;
+        margin-right: 2rem;
+    }
 }
+
+@media only screen and (max-width: 420px) {
+    .headQuote {
+        font-size: 4.3vw;
+        line-height: 1rem;
+        height: 0.2rem;
+    }
+    .quote {
+        font-size: 3vw;
+     }
+     .profile {
+         width:35%;
+    }
+    .appStore {
+        width: 5rem;
+        height: 2.2rem;
+        font-size: 0.65rem;
+    }
+    .playMarket {
+        width: 5rem;
+        height: 2.2rem;
+        font-size: 0.65rem;
+    }
+}
+
 
 
 
