--- a/components/contactsPage.module.css
+++ b/components/contactsPage.module.css
@@ -1,8 +1,5 @@
 .container {
     display: grid;
-    width: 100%;
-    top: 0;
-    left: 0;
     height: fit-content;
     justify-content: center;
     flex-direction: column;
@@ -25,7 +22,7 @@
     bottom: 6rem;
     font-family: "DM Serif Display", serif;
     font-weight: 400;
-    font-size: 48px;
+    font-size: 4.8vmin;
     line-height: 56px;
     text-align: center;
     color: #ffffff;
@@ -38,7 +35,7 @@
     margin: 1rem;
     font-style: normal;
     font-weight: 450;
-    font-size: 19px;
+    font-size: 1.8vmin;
     line-height: 32px;
     text-align: center;
     color: #ffffff;
@@ -57,15 +54,11 @@
     border: none;
 }
 
-
-.block {
-    display: inline;
-}
-
 .text {
     width: 350px;
     height: 95px;
     margin-left: 2.5rem;
+    margin-top: 5rem;
     font-family: "DM Serif Display", serif;
     font-weight: normal;
     font-size: 40px;
@@ -79,8 +72,8 @@
     background-color: #28514f;
     border-radius: 30px;
     margin-top: 10%;
-    margin-left: 5%;
-    width: 18%;
+    margin-left: 15%;
+    width: 35%;
     height: 56px;
     font-family: "Montserrat", sans-serif;
     font-size: 16px;
@@ -96,8 +89,8 @@
     color: white;
     background-color: #aeb4b6;
     border-radius: 30px;
-    margin-left: 5%;
-    width: 18%;
+    margin-left: 10%;
+    width: 35%;
     height: 56px;
     font-family: "Montserrat", sans-serif;
     font-size: 16px;
@@ -110,23 +103,19 @@
 }
 
 .banner {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
     width: 55rem;
     height: 20rem;
-    padding: 2rem 1rem;
+    /* padding: 2rem; */
     background: #f8e6be;
     margin: 5rem 28rem;
 }
-.button {
-    display: inline;
-    /* width:auto */
-}
-
 .profile {
     width: 100%;
     height: 348px;
-    margin: 0 0 30rem 29rem;
-    margin-bottom: 3rem;
-    float: left;
+    margin-left: 5rem;
 }
 
 .headText {
@@ -237,4 +226,28 @@
     color: #28514f;
     text-decoration: none;
     border-radius: 40px;
+}
+
+@media screen and (max-width: 900px) {
+    .banner {
+        width: 40rem;
+        height: 17rem;
+        margin: 2rem 40rem;
+    }
+    .headText {
+        margin: 0 40rem;
+    }
+    .profile  {
+        width: 40rem;
+        height: 17rem;
+    }
+    @media screen and (max-width: 420px) {
+        .banner {
+            padding: 0;
+            margin: 0;
+            width: 25rem;
+            height: 17rem;
+            margin: 2rem 40rem;
+        }
+    }
 }
