--- a/styles/global.css
+++ b/styles/global.css
@@ -4,7 +4,6 @@ body {
     display: grid;
     justify-items: center;
     justify-content: center;
-    width: 100%;
     height: 100%;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
@@ -13,14 +12,14 @@ body {
     margin: 0;
     padding: 5rem 0 0 0;
     box-sizing: border-box;
-    
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1100px) {
     html,
     body {
         max-width: 100%;
-  overflow-x: hidden;
+        padding: 4rem 0 0 0;
+        overflow-x: hidden;
     }
 }
 
@@ -28,7 +27,6 @@ body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    
 }
 
 a {
