--- a/components/contactsPage.module.css
+++ b/components/contactsPage.module.css
@@ -1,28 +1,22 @@
 .container {
     display: grid;
-    height: fit-content;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
 }
 
 .boxWrapper {
     height: 700px;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
     background-color: #28514f;
-    padding: 15rem 37rem;
+    padding: 11rem 38rem;
     margin-top: 10rem;
 }
 
 .headQuote {
     width: 583px;
     height: 112px;
-    bottom: 6rem;
     font-family: "DM Serif Display", serif;
     font-weight: 400;
-    font-size: 4.8vmin;
+    font-size: 2.6rem;
     line-height: 56px;
     text-align: center;
     color: #ffffff;
@@ -35,7 +29,7 @@
     margin: 1rem;
     font-style: normal;
     font-weight: 450;
-    font-size: 1.8vmin;
+    font-size: 0.9rem;
     line-height: 32px;
     text-align: center;
     color: #ffffff;
@@ -71,7 +65,7 @@
     color: white;
     background-color: #28514f;
     border-radius: 30px;
-    margin-top: 10%;
+    margin-top: 8%;
     margin-left: 15%;
     width: 35%;
     height: 56px;
@@ -107,14 +101,13 @@
     flex-direction: row;
     justify-content: flex-start;
     width: 55rem;
-    height: 20rem;
-    /* padding: 2rem; */
+    height: 19.3rem;
     background: #f8e6be;
     margin: 5rem 28rem;
 }
 .profile {
-    width: 100%;
-    height: 348px;
+    width: 419px;
+    height: 460px;
     margin-left: 5rem;
 }
 
@@ -122,7 +115,7 @@
     width: 641px;
     height: 112px;
     font-family: "DM Serif Display", serif;
-    margin-left: 36rem;
+    margin-left: 38rem;
     font-weight: 400;
     font-size: 48px;
     text-align: center;
@@ -132,8 +125,7 @@
 .textQuote {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
-    /* margin-top: 1rem; */
-    font-size: 16px;
+    font-size: calc(16px + 0.01vh);
     color: #65727b;
     text-align: center;
 }
@@ -199,55 +191,62 @@
     color: #28514f;
 }
 
-.list {
-    position: relative;
-    padding: 0 5rem;
-}
-
-.navItem {
-    display: inline-block;
-    left: 20rem;
-}
-
-.navLink {
-    list-style: none;
-    padding: 1rem;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: #626464;
-    text-decoration: none;
-    left: 20rem;
-}
-
-.navLink:hover {
-    text-decoration: none;
-    background-color: rgba(101, 114, 123, 0.2);
-    color: #28514f;
-    text-decoration: none;
-    border-radius: 40px;
-}
-
 @media screen and (max-width: 900px) {
+    .headQuote {
+        font-size: 2rem;
+        line-height: 2.7rem;
+    }
     .banner {
         width: 40rem;
-        height: 17rem;
-        margin: 2rem 40rem;
+        height: 10.9rem;
+        margin: 5rem 0 4rem 36rem;
+    }
+    .text {
+        margin-left: 2.5rem;
+        margin-top: 1.2rem;
+        font-size: 1.8rem;
+        line-height: 47px;
+    }
+    .appStore {
+        width: 30%;
+        height: 45px;
+        font-size: 13px;
+        margin-top: 5%;
+    }
+    .playMarket {
+        height: 45px;
+        font-size: 13px;
     }
     .headText {
-        margin: 0 40rem;
+        font-size: 2.6rem;
+        line-height: 2.4rem;
     }
-    .profile  {
-        width: 40rem;
-        height: 17rem;
+    .quote {
+        font-size: 2.1vw;
     }
-    @media screen and (max-width: 420px) {
-        .banner {
-            padding: 0;
-            margin: 0;
-            width: 25rem;
-            height: 17rem;
-            margin: 2rem 40rem;
-        }
+}
+
+@media screen and (max-width: 420px) {
+    .boxWrapper {
+        display: none;
+    }
+    .banner {
+        width: 18.6rem;
+        height: 10.9rem;
+        margin: 5rem 0 4rem 23rem;
+    }
+    .text {
+        margin-left: 0;
+        margin-top: 1.2rem;
+        font-size: 1.8rem;
+        line-height: 2.5rem;
+    }
+    .headText {
+        font-size: 10vw;
+        line-height: 2.4rem;
+        margin-left: 14.2rem;
+    }
+    .textQuote {
+font-size: 2.8vw;
     }
 }
