--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -1,20 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Montserrat:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 
-.headerBurger {
-    display: none;
-}
-
 @media (max-width:420px) {
-    .header  {
-        width: 100%;
+    .navLink {
+        display: none;
     }
-    .headerBody {
-        width: 100%;
+    .logo {
+        justify-content: center;
+        justify-items: center;
     }
-    /* .logo {
-        font-size: 20px;
-    } */
 }
 
 .header {
@@ -64,10 +58,7 @@
 }
 
 .logo {
-    z-index: 3;
-    flex: 0 0 60px;
     cursor: pointer;
-    max-width: 100%;
     font-family: "DM Serif Display", serif;
     font-style: normal;
     font-weight: 400;
@@ -79,7 +70,6 @@
 .headerList {
     list-style: none;
     display: flex;
-    z-index: 5;
 }
 
 .headerList .navItem {
