--- a/components/contactsPage.module.css
+++ b/components/contactsPage.module.css
@@ -81,7 +81,7 @@
 
 .playMarket {
     color: white;
-    background-color: #aeb4b6;
+    background-color: #949899;
     border-radius: 30px;
     margin-left: 10%;
     width: 35%;
@@ -93,7 +93,7 @@
 }
 
 .playMarket:hover {
-    background-color: #a9abac;
+    background-color: #85898b;
 }
 
 .banner {
