--- a/styles/global.css
+++ b/styles/global.css
@@ -15,7 +15,7 @@ body {
 @media screen and (max-width: 1100px) {
     html,
     body {
-        max-width: 100%;
+        width: 100%;
         padding: 3.7rem 0 0 0;
         overflow-x: hidden;
     }
