--- a/styles/global.css
+++ b/styles/global.css
@@ -7,8 +7,8 @@ body {
     height: 100%;
     line-height: 1.6;
     font-size: 18px;
-    margin: 0;
-    padding: 5rem 0 0 0;
+    margin: 0px !important;
+    padding: 4rem 0 0 0;
     box-sizing: border-box;
 }
 
@@ -16,7 +16,7 @@ body {
     html,
     body {
         width: 100%;
-        padding: 3.7rem 0 0 0;
+        padding: 3.5rem 0 0 0;
         overflow-x: hidden;
     }
 }
